Stage 5: spellcheck
